--- a/assets/css/formulario.css
+++ b/assets/css/formulario.css
@@ -49,7 +49,7 @@ legend {
 .form-group {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
 }
 
 .form-group label {
@@ -64,15 +64,32 @@ legend {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    margin-bottom: 10px;
+    
 }
 
 .radio-group {
     display: flex;
     justify-content: space-around;
-    margin-top: 10px;
+ 
 }
 
 .radio-group label {
     color: #333;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.btn-enviar {
+    background-color: #6A2B8D; 
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
